# sharq_full

./: .gitignore  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env  .env.template  Dockerfile  backfill_employee_info.py  pyproject.toml  seed.py  seed_attendance_history.py  start.sh
backend/app/: main.py
backend/app/core/: config.py  database.py  deps.py  permissions.py  security.py  seed_rbac.py
backend/app/enums/: attendance.py  camera.py  employee.py  employee_status.py
backend/app/exceptions/: attendance.py  auth.py  base.py  camera.py  department.py  employe_info.py  employee.py  group.py  permission.py  position.py  role.py  user.py  work_schedule.py
backend/app/models/: __init__.py  attendance_event.py  attendances.py  cameras.py  department.py  employe_info.py  employees.py  group.py  holiday.py  permission.py  position.py  role.py  role_permission.py  user.py  work_schedule.py  work_schedule_department.py  work_schedule_group.py
backend/app/repositories/: attendance.py  camera.py  department.py  employe_info.py  employee.py  group.py  holiday.py  permission.py  position.py  role.py  role_permission.py  user.py  work_schedule.py
backend/app/routers/: attendances.py  auth.py  camera.py  departments.py  employe_info.py  employees.py  groups.py  holidays.py  permissions.py  positions.py  reports.py  role_permissions.py  roles.py  users.py  work_schedule.py
backend/migrations/: env.py
camera_scheduler/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  sync_history.py
(+147 files in other folders)
