[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.1",
    "bcrypt>=4.2.0",
    "openpyxl>=3.1.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.0",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.49",
]
